--- a/sw/uiconfig/swriter/ui/sidebarpage.ui
+++ b/sw/uiconfig/swriter/ui/sidebarpage.ui
@@ -2,6 +2,7 @@
 <!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.0"/>
+  <requires lib="LibreOffice" version="1.0"/>
   <object class="GtkGrid" id="PagePropertyPanel">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -54,7 +55,7 @@
                 <property name="can_focus">False</property>
                 <property name="has_tooltip">True</property>
                 <property name="tooltip_text" translatable="yes">Size</property>
-                <property name="action_name">.uno:Size</property>
+                <property name="action_name">.uno:AttributePageSize</property>
                 <property name="label">toolbutton3</property>
                 <property name="use_underline">True</property>
               </object>
@@ -82,7 +83,7 @@
                 <property name="can_focus">False</property>
                 <property name="has_tooltip">True</property>
                 <property name="tooltip_text" translatable="yes">Columns</property>
-                <property name="action_name">.uno:Column</property>
+                <property name="action_name">.uno:PageColumnType</property>
                 <property name="label">toolbutton4</property>
                 <property name="use_underline">True</property>
               </object>
@@ -109,7 +110,7 @@
                 <property name="can_focus">False</property>
                 <property name="has_tooltip">True</property>
                 <property name="tooltip_text" translatable="yes">Margin</property>
-                <property name="action_name">.uno:Margin</property>
+                <property name="action_name">.uno:PageMargin</property>
                 <property name="label">toolbutton2</property>
                 <property name="use_underline">True</property>
               </object>
