tdf#101549: Remove tooltip_markup from glade .ui files
where there is also an identical tooltip_text.
And convert the remaining tooltip_markup properties
to tooltip_text.

Change-Id: Id9995217468fb7046a2822dcef9a99072a7269ee
Reviewed-on: https://gerrit.libreoffice.org/29367
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>

--- a/chart2/uiconfig/ui/tp_RangeChooser.ui
+++ b/chart2/uiconfig/ui/tp_RangeChooser.ui
@@ -5,7 +5,7 @@
   <object class="GtkImage" id="imageIB_RANGE">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="tooltip_markup" translatable="yes">Select data range</property>
+    <property name="tooltip_text" translatable="yes">Select data range</property>
     <property name="pixbuf">chart2/res/selectrange.png</property>
   </object>
   <object class="GtkBox" id="tp_RangeChooser">
@@ -76,7 +76,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="receives_default">True</property>
-                <property name="tooltip_markup" translatable="yes">Select data range</property>
+                <property name="tooltip_text" translatable="yes">Select data range</property>
                 <property name="image">imageIB_RANGE</property>
               </object>
               <packing>
