--- a/sc/uiconfig/scalc/ui/xmlsourcedialog.ui
+++ b/sc/uiconfig/scalc/ui/xmlsourcedialog.ui
@@ -44,7 +44,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <property name="tooltip_markup" translatable="yes">Browse to set source file.</property>
+                        <property name="tooltip_text" translatable="yes">Browse to set source file.</property>
                         <property name="image">image1</property>
                       </object>
                       <packing>
