--- a/sw/uiconfig/swriter/ui/envaddresspage.ui
+++ b/sw/uiconfig/swriter/ui/envaddresspage.ui
@@ -234,7 +234,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
-            <property name="tooltip_markup" translatable="yes">Insert</property>
+            <property name="tooltip_text" translatable="yes">Insert</property>
             <property name="valign">center</property>
             <property name="image">image1</property>
           </object>
