--- a/sw/uiconfig/swriter/ui/tocentriespage.ui
+++ b/sw/uiconfig/swriter/ui/tocentriespage.ui
@@ -887,7 +887,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
-                            <property name="tooltip_markup" translatable="yes">Ascending</property>
+                            <property name="tooltip_text" translatable="yes">Ascending</property>
                             <property name="image">image1</property>
                             <property name="xalign">0</property>
                             <property name="active">True</property>
@@ -904,7 +904,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
-                            <property name="tooltip_markup" translatable="yes">Descending</property>
+                            <property name="tooltip_text" translatable="yes">Descending</property>
                             <property name="image">image2</property>
                             <property name="xalign">0</property>
                             <property name="draw_indicator">True</property>
@@ -921,7 +921,6 @@
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
                             <property name="has_tooltip">True</property>
-                            <property name="tooltip_markup" translatable="yes">Ascending</property>
                             <property name="tooltip_text" translatable="yes">Ascending</property>
                             <property name="image">image3</property>
                             <property name="xalign">0</property>
@@ -939,7 +938,6 @@
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
                             <property name="has_tooltip">True</property>
-                            <property name="tooltip_markup" translatable="yes">Ascending</property>
                             <property name="tooltip_text" translatable="yes">Ascending</property>
                             <property name="image">image4</property>
                             <property name="xalign">0</property>
@@ -957,7 +955,6 @@
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
                             <property name="has_tooltip">True</property>
-                            <property name="tooltip_markup" translatable="yes">Descending</property>
                             <property name="tooltip_text" translatable="yes">Descending</property>
                             <property name="image">image5</property>
                             <property name="xalign">0</property>
@@ -975,7 +972,6 @@
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
                             <property name="has_tooltip">True</property>
-                            <property name="tooltip_markup" translatable="yes">Descending</property>
                             <property name="tooltip_text" translatable="yes">Descending</property>
                             <property name="image">image6</property>
                             <property name="xalign">0</property>
