set translatable attributes in .ui files
Change-Id: Idcdf9fbbc6b980a376fc0b5d607cbb48aa1dc5f1
Reviewed-on: https://gerrit.libreoffice.org/29503
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Andras Timar <andras.timar@collabora.com>

--- a/sc/uiconfig/scalc/ui/notebookbar.ui
+++ b/sc/uiconfig/scalc/ui/notebookbar.ui
@@ -660,7 +660,7 @@
                                 <property name="tooltip_text" translatable="yes">Specify the borders of the selected cells.</property>
                                 <property name="halign">start</property>
                                 <property name="action_name">.uno:SetBorderStyle</property>
-                                <property name="label">toolbutton1</property>
+                                <property name="label" translatable="no">toolbutton1</property>
                                 <property name="use_underline">True</property>
                               </object>
                               <packing>
