--- a/svx/uiconfig/ui/findreplacedialog.ui
+++ b/svx/uiconfig/ui/findreplacedialog.ui
@@ -522,7 +522,7 @@
                         <child>
                           <object class="GtkLabel" id="label7">
                             <property name="can_focus">False</property>
-                            <property name="label">Component Label</property>
+                            <property name="label" translatable="no">Component Label</property>
                             <property name="use_underline">True</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
@@ -541,7 +541,7 @@
                             <property name="spacing">12</property>
                             <child>
                               <object class="GtkButton" id="component1">
-                                <property name="label">component button 1</property>
+                                <property name="label" translatable="no">component button 1</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
                                 <property name="no_show_all">True</property>
@@ -554,7 +554,7 @@
                             </child>
                             <child>
                               <object class="GtkButton" id="component2">
-                                <property name="label">component button 2</property>
+                                <property name="label" translatable="no">component button 2</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
                                 <property name="no_show_all">True</property>
@@ -579,7 +579,7 @@
                 <child type="label">
                   <object class="GtkLabel" id="label6">
                     <property name="can_focus">False</property>
-                    <property name="label">Component Label</property>
+                    <property name="label" translatable="no">Component Label</property>
                     <property name="use_underline">True</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
