--- a/uui/uiconfig/ui/authfallback.ui
+++ b/uui/uiconfig/ui/authfallback.ui
@@ -145,7 +145,7 @@
                       <object class="GtkLabel" id="google_prefix_label">
                         <property name="can_focus">False</property>
                         <property name="margin_right">3</property>
-                        <property name="label">G-</property>
+                        <property name="label" translatable="no">G-</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
