convert border style to .ui
and merge CellBorderStylePopup and CellBorderStyleControl

Change-Id: I96ca2784f2055e8d99380b4d4bcd1374c9c40f4e

--- a/sc/uiconfig/scalc/ui/floatinglinestyle.ui
+++ b/sc/uiconfig/scalc/ui/floatinglinestyle.ui
@@ -19,6 +19,7 @@
         <property name="hexpand">True</property>
         <property name="vexpand">True</property>
         <property name="orientation">vertical</property>
+        <property name="row_spacing">6</property>
         <child>
           <object class="GtkBox" id="box">
             <property name="visible">True</property>
