Show dialog when starting in safe mode
Change-Id: Ie4b5f5b7309735dfa844bbaba9cb2763a3de3dc1

--- a/svx/util/svx.component
+++ b/svx/util/svx.component
@@ -36,6 +36,10 @@
       constructor="com_sun_star_comp_svx_CrashReportUI_get_implementation">
     <service name="com.sun.star.dialog.CrashReportUI"/>
   </implementation>
+  <implementation name="com.sun.star.comp.svx.SafeModeUI"
+      constructor="com_sun_star_comp_svx_SafeModeUI_get_implementation">
+    <service name="com.sun.star.dialog.SafeModeUI"/>
+  </implementation>
   <implementation name="com.sun.star.drawing.EnhancedCustomShapeEngine"
       constructor="com_sun_star_drawing_EnhancedCustomShapeEngine_get_implementation">
     <service name="com.sun.star.drawing.CustomShapeEngine"/>
