Improve checkbox label in header/footer tab
Change-Id: I608c18433ee27d3628a65ca3d0d666e384fce950
Reviewed-on: https://gerrit.libreoffice.org/29615
Reviewed-by: Yousuf Philips <philipz85@hotmail.com>
Tested-by: Yousuf Philips <philipz85@hotmail.com>

--- a/svx/uiconfig/ui/headfootformatpage.ui
+++ b/svx/uiconfig/ui/headfootformatpage.ui
@@ -110,7 +110,7 @@
                         <property name="column_spacing">12</property>
                         <child>
                           <object class="GtkCheckButton" id="checkSameLR">
-                            <property name="label" translatable="yes">Same _content left/right</property>
+                            <property name="label" translatable="yes">Same _content on left and right pages</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
