--- a/svx/uiconfig/ui/crashreportdlg.ui
+++ b/svx/uiconfig/ui/crashreportdlg.ui
@@ -111,6 +111,21 @@ Thank you for your help in improving %PRODUCTNAME.</property>
             <property name="position">3</property>
           </packing>
         </child>
+        <child>
+           <object class="GtkCheckButton" id="check_safemode">
+             <property name="label" translatable="yes">Restart LibreOffice to enter Safe Mode</property>
+             <property name="visible">True</property>
+             <property name="can_focus">True</property>
+             <property name="receives_default">False</property>
+             <property name="xalign">0</property>
+             <property name="draw_indicator">True</property>
+           </object>
+           <packing>
+             <property name="expand">False</property>
+             <property name="fill">True</property>
+             <property name="position">3</property>
+          </packing>
+        </child>
       </object>
     </child>
   </object>
